# accueil

./: .gitignore  Dockerfile  Pipfile  README.md  asgi.py  boot.sh  docker-compose.yaml  docker-compose.yml.template  pyproject.toml  requirements.txt  wsgi.py
accueil/: channel.py  exceptions.py  listeners.py  loaders.py  mail.py  main.py  middlewares.py  parsers.py  routes.py  scheduler.py  utils.py
accueil/models/: odoo.py  shift.py
accueil/static/css/: admin.css  shifts.css
accueil/static/js/: admin.js  shifts.js
accueil/templates/: admin.html  shifts.html
application/: __init__.py  config.py.template
application/back/: events.py  mail.py  mail_parts.py  member.py  odoo.py  routes.py  scheduler.py  shift.py  utils.py
application/static/css/: shifts.css
application/static/js/: all_shifts.js  global.js  shifts.js
application/templates/: all_shifts.html  shifts.html
configs/: configs.yaml.example
